# kettle

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
example/: CMakeLists.txt  barrier-loop-example.cpp  decomposition_example.txt  deutsch.cpp  deutsch_jozsa.cpp  deutsch_jozsa_balanced_ibm_example.cpp  grover_two_qubit.cpp  inverse_fourier.cpp  multithreaded_simulate.cpp  quantum_phase_estimation_diagonal.cpp  quantum_phase_estimation_diagonal_binary.cpp  quantum_phase_estimation_t_gate.cpp  quantum_phase_estimation_trotter20.cpp  quantum_teleportation.cpp  random_state.cpp  read_decomposition_file.cpp  save_statevector_example.cpp  shaeer_qpe_measure.cpp  shaeer_qpe_simulate.cpp  shaeer_qpe_simulate_minimal.cpp  shor.cpp  simon_ibm_example.cpp
example/algorithms/: deutsch.cpp  deutsch_jozsa.cpp  deutsch_jozsa_balanced_ibm_example.cpp  grover_two_qubit.cpp  quantum_phase_estimation_t_gate.cpp  quantum_teleportation.cpp  shor.cpp  simon_ibm_example.cpp  vqe_basic.cpp
example/general/: circuit_with_control_flow.cpp  creating_the_bell_state.cpp  hello_eigen.cpp  inverse_fourier.cpp  multithreaded_simulate.cpp  quantum_phase_estimation_diagonal.cpp  quantum_phase_estimation_diagonal_binary.cpp  quantum_phase_estimation_trotter20.cpp  random_state.cpp  save_statevector_example.cpp
include/: CMakeLists.txt
include/kettle/: kettle.hpp
include/kettle/calculations/: measurements.hpp  probabilities.hpp
include/kettle/circuit/: circuit.hpp  circuit_element.hpp  classical_register.hpp  control_flow.hpp  control_flow_function.hpp  control_flow_predicate.hpp
include/kettle/circuit_loggers/: circuit_logger.hpp  classical_register_circuit_logger.hpp  density_matrix_circuit_logger.hpp  statevector_circuit_logger.hpp
include/kettle/circuit_operations/: append_circuits.hpp  compare_circuits.hpp  make_binary_controlled_circuit.hpp  make_controlled_circuit.hpp  transpile_to_primitive.hpp
include/kettle/common/: arange.hpp  clone_ptr.hpp  linear_bijective_map.hpp  mathtools.hpp  matrix2x2.hpp  print.hpp  prng.hpp  tolerance.hpp  utils.hpp
include/kettle/gates/: common_u_gates.hpp  compound_gate.hpp  fourier.hpp  general_gate.hpp  matrix2x2_gate_decomposition.hpp  multiplicity_controlled_u_gate.hpp  primitive_gate.hpp  primitive_gate_map.hpp  random_u_gates.hpp  swap.hpp  toffoli.hpp
include/kettle/io/: io_control_flow.hpp  numpy_statevector.hpp  read_pauli_operator.hpp  read_tangelo_file.hpp  statevector.hpp  write_tangelo_file.hpp
include/kettle/optimize/: n_local.hpp
include/kettle/parameter/: parameter.hpp  parameter_expression.hpp
include/kettle/simulation/: gate_pair_generator.hpp  measure.hpp  multithread_simulate_utils.hpp  operations.hpp  simulate.hpp  simulate_density_matrix.hpp  simulate_pauli.hpp  simulate_utils.hpp  statevector_simulator.hpp
include/kettle/state/: bitstring_utils.hpp  density_matrix.hpp  endian.hpp  marginal.hpp  measure_and_collapse.hpp  project_state.hpp  qubit_state_conversion.hpp  random.hpp  state.hpp  statevector.hpp
include/mini-qiskit/: circuit.hpp  gate.hpp  gate_pair_generator.hpp  mini-qiskit.hpp  operations.hpp  primitive_gate.hpp  simulate.hpp  state.hpp
include/mini-qiskit/calculations/: measurements.hpp  probabilities.hpp
include/mini-qiskit/circuit/: circuit.hpp  classical_register.hpp  control_flow.hpp  control_flow_function.hpp
include/mini-qiskit/circuit_operations/: append_circuits.hpp  build_decomposed_circuit.hpp  compare_circuits.hpp  make_binary_controlled_circuit.hpp  make_controlled_circuit.hpp  transpile_to_primitive.hpp
include/mini-qiskit/common/: append_circuits.hpp  arange.hpp  complex.hpp  gateprint.hpp  linear_bijective_map.hpp  mathtools.hpp  matrix2x2.hpp  print.hpp  prng.hpp  traits.hpp  utils.hpp
include/mini-qiskit/decomposed/: build_decomposed_circuit.hpp  decomposed_gate.hpp  read_decomposition_file.hpp  read_tangelo_file.hpp
include/mini-qiskit/gates/: common_u_gates.hpp  control_swap.hpp  fourier.hpp  matrix2x2_gate_decomposition.hpp  multiplicity_controlled_u_gate.hpp  primitive_gate.hpp  primitive_gate_map.hpp  random_u_gates.hpp  swap.hpp  toffoli.hpp
include/mini-qiskit/io/: numpy_statevector.hpp  read_tangelo_file.hpp  statevector.hpp  write_tangelo_file.hpp
include/mini-qiskit/simulation/: gate_pair_generator.hpp  measure.hpp  multithread_simulate_utils.hpp  operations.hpp  simulate.hpp  simulate_utils.hpp
include/mini-qiskit/state/: bitstring_utils.hpp  endian.hpp  marginal.hpp  qubit_state_conversion.hpp  random.hpp  state.hpp
qpe_tangelo_project/: CMakeLists.txt  matrix2d.cpp  qpe_tangelo_eigenvalue.cpp  qpe_tangelo_measure.cpp  qpe_tangelo_project.cpp  qpe_tangelo_reverse_and_project.cpp  qpe_tangelo_simulate.cpp  qpe_tangelo_simulate_minimal.cpp  qpe_tangelo_simulate_reverse.cpp  read_pauli_operator.cpp  vqe_dipolar_linear_rotors.cpp
test/: CMakeLists.txt
test/source/: circuit_test.cpp  gate_pair_generator_test.cpp  gate_test.cpp  mini-qiskit_test.cpp  multi_product_test.cpp  operations_test.cpp  simulate_test.cpp  state_test.cpp
test/source/calculations/: measurements_test.cpp  probabilities_test.cpp
test/source/circuit/: circuit_test.cpp
test/source/circuit_operations/: append_circuits_test.cpp  build_decomposed_circuit_test.cpp  compare_circuits_test.cpp  make_binary_controlled_circuit_test.cpp  make_controlled_circuit_test.cpp  transpile_to_primitive_test.cpp
test/source/common/: append_circuits_test.cpp  arange_test.cpp  linear_bijective_map_test.cpp  mathtools_test.cpp  matrix2x2_test.cpp
test/source/decomposed/: build_decomposed_circuit_test.cpp  read_tangelo_file_test.cpp
test/source/gates/: control_swap_test.cpp  fourier_test.cpp  gate_test.cpp  matrix2x2_gate_decomposition_test.cpp  multiplicity_controlled_u_gate_test.cpp  random_u_gates_test.cpp  toffoli_test.cpp
test/source/io/: io_control_flow_test.cpp  numpy_statevector_test.cpp  read_pauli_operator_test.cpp  read_tangelo_file_test.cpp  statevector_test.cpp  write_tangelo_file_test.cpp
test/source/optimize/: n_local_test.cpp  optimize_test.cpp
(+145 files in other folders)
